log tranformation of the x-axis.
- Add an element in the list of drcfit() output : unfitres giving some 
information on selected items for which the modelling step is not successful
- Add of a function to plot raw data on target items optionally with fitted curves 
for items which have be selected in step 2 and for which step 3 was successful
(new function targetplot()).
- Add of the argument transfo.blind in RNAseqdata().
- Add of the argument free.y.scales in curvesplot() to enable free y scales in facets
and dose_log_transfo to use an x log scale for plot and calculation of signal.
- Add of examples in DRomics.Rd to help a multi-omics approach
- Add of the argument round.counts to enable rounding of read counts that would come
from Kallisto or Salmon.


Version 2.0-1 
=============
NEW FEATURES
- Add of a filter in itemselect(), to exclude from the selection items
with a too high proportion of non detected values (assuming they were
imputed to a common minimum value).
- Add of an argument point.type that enables the change of point type
in, ecdfplotwithCI or its coding by a given factor.
- Add of an argument plot.type in function plot.drcfit() to enable
residual plots.

Version 2.0-0 
=============
NEW FEATURES
- Replacement of the function omicdata() by the function 
microarraydata() and add of two new data importation functions,
RNAseqdata() and metabolomicdata().

Version 1.1-3 
=============
NEW FEATURES
- Replacement of the argument named bytypology of plot.bmdcalc
by an argument named by which can taka three values,
"none", "trend", "model" or "typology".
- Add of a function to plot fitted curves (new function curvesplot()).

Version 1.1-2 
=============
NEW FEATURES
- Add of a function to plot the distribution of a variable as an ecdf plot, with confidence 
intervals on this variable (new function ecdfplotwithCI)

Version 1.1-1 
=============
NEW FEATURES
- Add of bootstrap computation of confidence intervals on benchmark doses (new function bmdboot)