@@ -3,7 +3,7 @@ import(stats)
 import(graphics)
 import(ggplot2)
 importFrom("limma", normalizeBetweenArrays, lmFit, eBayes, topTable)
-importFrom("DESeq2", rlog, vst, DESeq, results, DESeqDataSetFromMatrix)
+importFrom("DESeq2", rlog, vst, varianceStabilizingTransformation, DESeq, results, DESeqDataSetFromMatrix)
 importFrom("SummarizedExperiment", assay)
 importFrom("utils", txtProgressBar, setTxtProgressBar, read.table)
 importFrom("grDevices", pdf, dev.off)
