@@ -19,7 +19,8 @@ information on selected items for which the modelling step is not successful
 - Add of a function to plot raw data on target items optionally with fitted curves 
 for items which have be selected in step 2 and for which step 3 was successful
 (new function targetplot()).
-- Add of the argument transfo.blind in RNAseqdata().
+- Add of the argument transfo.blind in RNAseqdata() and fixing of a bug in RNAseqdata()
+that occured when using vst() with small datasets.
 - Add of the argument free.y.scales in curvesplot() to enable free y scales in facets
 and dose_log_transfo to use an x log scale for plot and calculation of signal.
 - Add of examples in DRomics.Rd to help a multi-omics approach
